<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FightingBet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="wait">Aguarde&#8230;</string>
    <string name="inicio">Início</string>
    <string name="evento">Evento</string>
    <string name="eventos">Eventos</string>
    <string name="aposta">Aposta</string>
    <string name="apostas">Apostas</string>
    <string name="resultado">Resultado</string>
    <string name="resultados">Resultados</string>
    <string name="ranking">Ranking</string>
    <string name="noticia">Notícia</string>
    <string name="noticias">Notícias</string>
    <string name="logout">Sair</string>
    <string name="title_noticia_list">Noticias</string>
    <string name="title_noticia_detail">Noticia Detail</string>
    <string name="title_activity_noticias">Notícias</string>
    <string name="title_activity_resultados">Resultados</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in_register"><b>Login</b> ou cadastre-se</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_forgot_password">Esqueceu sua senha</string>
    <string name="login_progress_signing_in">Efetuando login. Aguarde&#8230;</string>
    <string name="error_invalid_email">Endereço de email inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Esse campo é obrigatório</string>
    <string name="failed">Falhou</string>
    <string name="login_fail">Falha ao realizar o login</string>
    <string name="logout_fail">Falha ao realizar o logout</string>
    <string name="eventos_load_fail">Falha ao carregar a lista de eventos</string>
    <string name="noticias_load_fail">Falha ao carregar a lista de notícias</string>
    <string name="title_activity_apostas">ApostasActivity</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="title_activity_noticia_detail">NoticiaDetailActivity</string>

</resources>
