<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item android:id="@+id/menu_main"
          android:icon="@drawable/ic_launcher"
          android:title="@string/inicio" />
	
	<item android:id="@+id/menu_apostas"
          android:icon="@drawable/ic_launcher"
          android:title="@string/apostas" />
    
    <item android:id="@+id/menu_resultados"
          android:icon="@drawable/ic_launcher"
          android:title="@string/resultados" />
    
    <item android:id="@+id/menu_ranking"
          android:icon="@drawable/ic_launcher"
          android:title="@string/ranking" />
    
    <item android:id="@+id/menu_noticias"
          android:icon="@drawable/ic_launcher"
          android:title="@string/noticias" />
    
    <item android:id="@+id/menu_sair"
          android:icon="@drawable/ic_launcher"
          android:title="@string/logout" />
    
</menu>
