<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <Button
        android:id="@+id/btnApostas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apostas" />

    <Button
        android:id="@+id/btnResultados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultados" />

    <Button
        android:id="@+id/btnRanking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ranking" />

    <Button
        android:id="@+id/btnNoticias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noticias" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

</LinearLayout>